changes to the outreach subsection

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -382,14 +382,15 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Outreach</h2>
         <p class="lead mb-5">
-        06/18 - present: I am the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a>
-        with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.<br />
+        09/18: I volunteered for the University-wide Open Day at the <a href="http://www.cs.ox.ac.uk/">CS department</a> and presented a realtime demo
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+of my work on realtime instance segmentation. A teaser <a href="">here</a>.<br/>
 
-        /18: Jasim Happa workshop <br />
-        /18: CS open day <br />
+        06/18 - present: I have taken the position of <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.<br />
+
+        06/18: I co-organised a coding workshop using <a href="https://www.youtube.com/watch?v=0yQYr7CIxBc&feature=youtu.be">spheros</a> as part of the <a href="https://www.cs.ox.ac.uk/conferences/InspireHer/">InspireHer!</a> series.<br />
     
-        05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
-        at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
+        05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
 
         06/17 - 05/18: I served as the Industry coordinator and External relations officer with 
         <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <br />
@@ -397,8 +398,6 @@ The second is a clear demonstration of the tight coupling between classification
         /17: I gave a talk for Women in Engineering day to  <br />
         /17: I gave a talk as part of <br />
 
-        06/17 - 05/18: I served as the Industry coordinator and External relations officer with 
-        <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <br />
         04/17: Late night London Science Museum Volunteer <br />
         05/17: Late night London Science Museum Volunteer <br />
 
