updated the html pages for the activities, presentations, etc

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -24,6 +24,9 @@
     a {font-family: "Times New Roman", cursive}
     body,h1,h2,h3,h4,h5,h6,div,p, .subheading {font-family: "Times New Roman", cursive}
     h6 {color: #727b84;text-transform: capitalize;font-size: 1.3rem;}
+    ul {
+    list-style-type: '- ';
+    }
     </style>
 
   </head>
@@ -115,34 +118,31 @@
         <div class="my-auto">
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
-    10/18: Excited to be giving a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> 
-    jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
-    Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<br />
+<ul class="lead mb-5">
+<li>    10/18: Excited to be giving a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<il>
 
-    10/18: Grateful to be receiving the WiML travel award, looking forward to the workshop.<br />
-    10/18: Grateful to be receiving the NIPS travel award.<br />
+<li>    10/18: Grateful to be receiving the WiML travel award, looking forward to the workshop.<il>
 
-    09/18: Our paper explaining adversarial vulnerability in deep neural nets is accepted at NIPS'18. 
-    (<a href="https://nips.cc/Conferences/2018/Schedule?showEvent=12016">With friends like these..</a>)<br />
+<li>    10/18: Grateful to be receiving the NIPS travel award.<il>
 
-    08/18: I am co-organising the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track 
-    at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
+<li>    09/18: Our paper explaining adversarial vulnerability in deep neural nets is accepted at NIPS'18. 
+    (<a href="https://nips.cc/Conferences/2018/Schedule?showEvent=12016">With friends like these..</a>)<il>
 
-    06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a>
-    with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> 
-    for the academic year 2018-19. Our relationship history <a href="./news/oxwocs.html">here</a>!<br />
+<li>    08/18: I am co-organising the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<il>
 
-    05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
-     at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
+<li>    06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19. Our relationship history <a href="./news/oxwocs.html">here</a>!<il>
 
-    05/18: I am presenting my work at <a href=https://iclr.cc/Conferences/2018/Schedule?type=Poster>ICLR'18</a>. Some highlights <a href=./news/iclr.html>here</a>.<br />
+<li>    05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<il>
 
-    04/18: Grateful to be receiving <a href=https://www.stx.ox.ac.uk/about-st-cross>St. Cross</a> travel and research scholarship.<br />
+<li>    05/18: I am presenting my work at <a href=https://iclr.cc/Conferences/2018/Schedule?type=Poster>ICLR'18</a>. Some highlights <a href=./news/iclr.html>here</a>.<il>
 
-    03/18: Grateful to be receiving the ICLR'18 travel award.<br />
+<li>    04/18: Grateful to be receiving <a href=https://www.stx.ox.ac.uk/about-st-cross>St. Cross</a> travel and research scholarship.<il>
 
-    01/18: Our paper on learning attention in classification CNNs is accepted at ICLR'18. 
-    (<a href="https://openreview.net/forum?id=HyzbhfWRW"> Learn to pay attention!</a>) 
+<li>    03/18: Grateful to be receiving the ICLR'18 travel award.<il>
+
+<li>    01/18: Our paper on learning attention in classification CNNs is accepted at ICLR'18. 
+    (<a href="https://openreview.net/forum?id=HyzbhfWRW"> Learn to pay attention!</a>) <il>
+</ul>
     <br/><br/>
     <a href='./news/about.html'>Older news</a>
     </p>
@@ -211,7 +211,7 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
           <h2 class="mb-5">Publications</h2>
 
-    <div class="lead">
+    <div class="lead mb-5">
 
       <h6> [2018] </h6>
 
@@ -303,7 +303,7 @@ The second is a clear demonstration of the tight coupling between classification
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="datasets">
         <div class="my-auto">
           <h2 class="mb-5">Datasets</h2>
-          <p class="lead">
+          <p class="lead mb-5">
       Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
       12,854 train images and 6,110 test images of the flags of 224 different countries harvested from the world wide web and manually cropped to loosely fit to the inlying flags. More details can be found in this <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
       The dataset itself can be downloaded from <a href="/data/tvg/sjetley/">here</a>.
@@ -318,20 +318,14 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Talks</h2>
         <p class="lead mb-5">
-        10/18: I gave a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
-    Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<br />
+<ul class="lead mb-5">
+<li>        10/18: I gave a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Find the slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<il>
 
-        07/17: I gave a talk at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. 
+<li>        07/17: I gave a talk at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. 
         Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">
-        here</a>. 
-        Video link for the demo video on one of the 
-        slides is <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.<br />
+        here</a>. Video link for the demo video on one of the slides is <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.<il>
 
-        03/17: I was selected for a student talk at the 
-        <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17 in Edinburgh</a>. 
-        Access the <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">recording</a>, 
-        <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">
-        slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.<br/>
+<li>        03/17: I was selected for a student talk at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17 in Edinburgh</a>. Access the <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.<il>
 
     </p>
     </section>
@@ -346,7 +340,7 @@ The second is a clear demonstration of the tight coupling between classification
           <h2 class="mb-5">Teaching</h2>
 
         <h6 class="mb-4">Tutored for:</h6>
-          <ul  class="lead">
+          <ul  class="lead mb-5">
             <li><a href="http://www.robots.ox.ac.uk/~fwood/teaching/B16_hilary_2013_2014/index.html">B16 course on Operating Systems (Hilary'16)</a><il>
             <li><a href="http://www.robots.ox.ac.uk/~az/lectures/ia/index.html">B14 course on Image Analysis (Michaelmas'16)</a><il>
             <li><a href="http://www.robots.ox.ac.uk/~sjrob/Teaching/B14_SP/b14_sp_lect1.pdf">B14 course on Signal Analysis (Hilary'17)</a><il>
@@ -354,7 +348,7 @@ The second is a clear demonstration of the tight coupling between classification
            </ul><br/>
 
         <h6 class="mb-4">Laboratory demonstrator for:</h6>
-        <ul  class="lead">
+        <ul  class="lead mb-5">
         <li><a href="http://www.eng.ox.ac.uk/~labejp/Courses/1P5/">P5 Matlab software programming course (Michaelmas'16, Hilary'17, Trinity'17)</a><il>
         <li>B14 Lab course on Image Analysis (Hilary'17)<il>
         </ul>
@@ -368,10 +362,13 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Admin/Review Work</h2>
         <p class="lead mb-5">
-        10/18: I am reviewing for ICLR'19.<br />
-        08/18: I co-organised the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the 
-<a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
-        07/18: I reviewed for NIPS'18.<br/>        
+<ul class="lead mb-5">
+<li>        10/18: I am reviewing for ICLR'19.<il>
+
+<li>        08/18: I co-organised the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<il>
+
+<li>        07/18: I reviewed for NIPS'18.<il>        
+</ul>
     </p>
     </section>
 
@@ -382,26 +379,26 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Outreach</h2>
         <p class="lead mb-5">
-        09/18: I volunteered for the University-wide Open Day at the <a href="http://www.cs.ox.ac.uk/">CS department</a> and presented a realtime demo
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-of my work on realtime instance segmentation. A teaser <a href="">here</a>.<br/>
+<ul class="lead mb-5">
 
-        06/18 - present: I have taken the position of <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.<br />
+<li>        09/18: I volunteered for the University-wide Open Day at the <a href="http://www.cs.ox.ac.uk/">CS department</a> and presented a realtime demo of my work on realtime instance segmentation. A teaser <a href="./news/listentoSee_demo.html">here</a>.<il>
 
-        06/18: I co-organised a coding workshop using <a href="https://www.youtube.com/watch?v=0yQYr7CIxBc&feature=youtu.be">spheros</a> as part of the <a href="https://www.cs.ox.ac.uk/conferences/InspireHer/">InspireHer!</a> series.<br />
+<li>        06/18 to present: I have taken the position of <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">Outreach & Scholarship officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.<il>
+
+<li>        06/18: I co-organised a coding workshop using <a href="https://www.youtube.com/watch?v=0yQYr7CIxBc&feature=youtu.be">spheros</a> as part of the <a href="https://www.cs.ox.ac.uk/conferences/InspireHer/">InspireHer!</a> series.<il>
     
-        05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
+<li>        05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<il>
 
-        06/17 - 05/18: I served as the Industry coordinator and External relations officer with 
-        <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <br />
+<li>        06/17 to 05/18: I served as the Industry coordinator and External relations officer with 
+        <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <il>
 
-        /17: I gave a talk for Women in Engineering day to  <br />
-        /17: I gave a talk as part of <br />
+<li>        05/17 to 06/17: As a student outreach ambassador for the <a href="http://www.eng.ox.ac.uk/">Department of Engineering Science, University of Oxford</a>, I have engaged with yr. 11, 12 & 13 school students at a host of events including - <a href="https://www.oxengscioutreach.com/events">Lubbock lectures for schools, International Women in Engineering Day and Engineering Open Days</a>. One set of slides especially popular amongst students during my classroom talks can be found <a href="./news/AI_for_visualperception_slides.html">here</a>.<il>
 
-        04/17: Late night London Science Museum Volunteer <br />
-        05/17: Late night London Science Museum Volunteer <br />
+<li>        06/17: I gave a talk under the theme of 'Mobile Robotics' for the <a href="https://www.cs.ox.ac.uk/lookingforward/">Looking Forward</a> initiative of the Department of Computer Science, University of Oxford to encourage and motivate girl students towards STEM.<il>
 
+<li>        02/17 - 05/17: I served as a student volunteer with the <a href="https://www.sciencemuseum.org.uk/what-was-on/robots">Robots exhibition at the Science Museum London</a>, supported by the Royal Academy of Engineering. More details <a href="./news/robots_SML.html">here</a>.<il>
 
+</ul>
 
     </p>
     </section>
@@ -412,26 +409,25 @@ of my work on realtime instance segmentation. A teaser <a href="">here</a>.<br/>
         <div class="my-auto">
         <h2 class="mb-5">Awards</h2>
         <p class="lead mb-5">
-2017: <a href="https://www.pmb.ox.ac.uk/news/pembroke-team-win-tri-innovate-2017-innovative-audio-navigation-concept">Winner of the Tri-innovate challenge</a> - Oxford university annual innovation challenge for
-<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;identifying and supporting the most upcoming early-stage business ideas.
-<br />
+<ul class="lead mb-5">
 
-2016: Amongst the <a href="https://warwick.ac.uk/fac/sci/dcs/research/tia/her2contest/outcome">top-10 algorithms for breast cancer prognosis challenge</a> (lookout for Team HERcules). <br />
+<li> 2017: <a href="https://www.pmb.ox.ac.uk/news/pembroke-team-win-tri-innovate-2017-innovative-audio-navigation-concept">Winner of the Tri-innovate challenge</a> - Oxford university annual innovation challenge for identifying and supporting the most upcoming early-stage business ideas.<il>
 
-2015: Best research intern for ‘End-to-end saliency prediction using deep learning’ project at 
-<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Xerox Research Centre Europe, Grenoble (now <a href="http://www.europe.naverlabs.com/NAVER-LABS-Europe/People/Naila-Murray">Naver Labs</a>).<br />
+<li> 2016: Amongst the <a href="https://warwick.ac.uk/fac/sci/dcs/research/tia/her2contest/outcome">top-10 algorithms for breast cancer prognosis challenge</a> (lookout for Team HERcules).<il>
 
-2015: Received an Honorary Mention for Originality for the <a href="https://drive.google.com/file/d/0B-5KrfSltQrGSXBWYkpCbThjdjQ/view">Technical Essay entry</a> at the International 
-<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Vision Summer School'15.<br />
+<li> 2015: Best research intern for ‘End-to-end saliency prediction using deep learning’ project at Xerox Research Centre Europe, Grenoble (now <a href="http://www.europe.naverlabs.com/NAVER-LABS-Europe/People/Naila-Murray">Naver Labs</a>).<il>
 
-2012: Best Performer– 2012 & Best Team – 2012 awardee at CDAC-Pune for outstanding research work.
-<br />
+<li> 2015: Received an Honorary Mention for Originality for the <a href="https://drive.google.com/file/d/0B-5KrfSltQrGSXBWYkpCbThjdjQ/view">Technical Essay entry</a> at the International Computer Vision Summer School'15.<il>
 
-2010: Runner Up in Most Innovative Projects category at National Technical Symposium – 
-<a href="http://pictinc.org/">Impetus & Concepts</a>'10.
-<br />
+<li> 2014-15: Recipient of the <a href="http://www.stapleytrust.org/wp/about/">Sir Richard Stapley academic scholarship</a>. <il>
 
-2006: All India Rank 102 in 5th National Cyber Olympiad of the <a href="http://www.sofworld.org/nco">Science Olympiad Foundation</a>. <br />
+<li> 2012: Best Performer– 2012 & Best Team – 2012 awardee at CDAC-Pune for outstanding research work.<il>
+
+<li> 2010: Runner Up in Most Innovative Projects category at National Technical Symposium – <a href="http://pictinc.org/">Impetus & Concepts</a>'10.<il>
+
+<li> 2006: All India Rank 102 in 5th National Cyber Olympiad of the <a href="http://www.sofworld.org/nco">Science Olympiad Foundation</a>.<il>
+
+</ul>
         </p>
         </section>
 
