references are in, link to them

--- a/startbootstrap-personal-profile/bibs/3dactivityrecognition.html
+++ b/startbootstrap-personal-profile/bibs/3dactivityrecognition.html
@@ -56,11 +56,14 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@inproceedings{jetley20143d,
+  title={3d activity recognition using motion history and binary shape templates},
+  author={Jetley, Saumya and Cuzzolin, Fabio},
+  booktitle={Asian Conference on Computer Vision},
+  pages={129--144},
+  year={2014},
+  organization={Springer}
+}
 </div>
 
 </body>
