--- a/startbootstrap-personal-profile/bibs/automaticflagrecognition.html
+++ b/startbootstrap-personal-profile/bibs/automaticflagrecognition.html
@@ -56,11 +56,16 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@inproceedings{jetley2013automatic,
+  title={Automatic flag recognition using texture based color analysis and gradient features},
+  author={Jetley, Saumya and Vaze, Atish and Belhe, Swapnil},
+  booktitle={Image Information Processing (ICIIP), 2013 IEEE Second International Conference on},
+  pages={464--469},
+  year={2013},
+  organization={IEEE}
+}
+
+
 </div>
 
 </body>
