--- a/startbootstrap-personal-profile/bibs/hindihwwordreco.html
+++ b/startbootstrap-personal-profile/bibs/hindihwwordreco.html
@@ -56,10 +56,22 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
+@inproceedings{Belhe:2012:HHW:2432553.2432556,
+ author = {Belhe, Swapnil and Paulzagade, Chetan and Deshmukh, Akash and Jetley, Saumya and Mehrotra, Kapil},
+ title = {Hindi Handwritten Word Recognition Using HMM and Symbol Tree},
+ booktitle = {Proceeding of the Workshop on Document Analysis and Recognition},
+ series = {DAR '12},
+ year = {2012},
+ isbn = {978-1-4503-1797-9},
+ location = {Mumbai, India},
+ pages = {9--14},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2432553.2432556},
+ doi = {10.1145/2432553.2432556},
+ acmid = {2432556},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {HMM, HOG features, Hindi handwritten word recognition, symbol tree},
 } 
 </div>
 
