--- a/startbootstrap-personal-profile/bibs/learntopayattention.html
+++ b/startbootstrap-personal-profile/bibs/learntopayattention.html
@@ -56,11 +56,14 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@inproceedings{
+jetley2018learn,
+title={Learn to Pay Attention},
+author={Saumya Jetley and Nicholas A. Lord and Namhoon Lee and Philip Torr},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=HyzbhfWRW},
+}
 </div>
 
 </body>
