--- a/startbootstrap-personal-profile/bibs/prototypicalpriors.html
+++ b/startbootstrap-personal-profile/bibs/prototypicalpriors.html
@@ -55,12 +55,21 @@ a.sidemenu.onView {
 <body>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@inproceedings{BMVC2015_120,
+	title={Prototypical Priors: From Improving Classification to Zero-Shot Learning},
+	author={Saumya Jetley and Bernardino Romera-Paredes and Sadeep Jayasumana and Philip Torr},
+	year={2015},
+	month={September},
+	pages={120.1-120.12},
+	articleno={120},
+	numpages={12},
+	booktitle={Proceedings of the British Machine Vision Conference (BMVC)},
+	publisher={BMVA Press},
+	editor={Xianghua Xie, Mark W. Jones, and Gary K. L. Tam},
+	doi={10.5244/C.29.120},
+	isbn={1-901725-53-7},
+	url={https://dx.doi.org/10.5244/C.29.120}
+}
 </div>
 
 </body>
