--- a/startbootstrap-personal-profile/bibs/straighttoshapes.html
+++ b/startbootstrap-personal-profile/bibs/straighttoshapes.html
@@ -56,10 +56,12 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
+@InProceedings{Jetley_2017_CVPR,
+author = {Jetley, Saumya and Sapienza, Michael and Golodetz, Stuart and Torr, Philip H. S.},
+title = {Straight to Shapes: Real-Time Detection of Encoded Shapes},
+booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {July},
+year = {2017}
 } 
 </div>
 
