--- a/startbootstrap-personal-profile/bibs/twostagebinarisation.html
+++ b/startbootstrap-personal-profile/bibs/twostagebinarisation.html
@@ -56,11 +56,18 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@inproceedings{DBLP:conf/icpr/JetleyBKN12,
+  author    = {Saumya Jetley and
+               Swapnil Belhe and
+               Vijaya Kumar Koppula and
+               Atul Negi},
+  title     = {Two-stage hybrid binarization around fringe map based text line segmentation
+               for document images},
+  booktitle = {{International Conference on Pattern Recognition}},
+  pages     = {343--346},
+  publisher = {{IEEE} Computer Society},
+  year      = {2012}
+}
 </div>
 
 </body>
