--- a/startbootstrap-personal-profile/bibs/unconstraineddeccharreco.html
+++ b/startbootstrap-personal-profile/bibs/unconstraineddeccharreco.html
@@ -56,10 +56,23 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
+@inproceedings{Mehrotra:2013:UHD:2505377.2505386,
+ author = {Mehrotra, Kapil and Jetley, Saumya and Deshmukh, Akash and Belhe, Swapnil},
+ title = {Unconstrained Handwritten Devanagari Character Recognition Using Convolutional Neural Networks},
+ booktitle = {Proceedings of the 4th International Workshop on Multilingual OCR},
+ series = {MOCR '13},
+ year = {2013},
+ isbn = {978-1-4503-2114-3},
+ location = {Washington, D.C., USA},
+ pages = {15:1--15:5},
+ articleno = {15},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/2505377.2505386},
+ doi = {10.1145/2505377.2505386},
+ acmid = {2505386},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Devanagari character recognition, convolutional neural network, unconstrained handwritten recognition},
 } 
 </div>
 
