--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -181,7 +181,7 @@ The second is a clear demonstration of the tight coupling between classification
     <p class="lead"> <br/> In this work, we propose to directly regress to objects' shapes in addition to the object bounding boxes and categories. It is crucial to find an appropriate shape representation that is compact and decodable, and in which objects can be compared for higher-order concepts such as view similarity, pose variation and occlusion. To achieve this, we use a denoising convolutional auto-encoder to establish an embedding space, and place the decoder after a fast end-to-end network trained to regress directly to the encoded shape vectors. This yields what to the best of our knowledge is the first real-time shape prediction network, running at ~35 FPS on a high-end desktop, that additionally generalises to unseen categories. 
 <br/> [<a href="https://arxiv.org/abs/1611.07932">details</a>]
       [<a href="https://github.com/torrvision/straighttoshapes">code</a>]
-      [<a href="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1">demo</a>]
+      [<a href="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1">video demo</a>]
     </p><h6 class="mb-5"></h6>
 
     <li><h6 class="mb-5">Human Saliency Estimation</h6><il>
@@ -189,7 +189,7 @@ The second is a clear demonstration of the tight coupling between classification
     <p class="lead"> <br/>  In this work, we introduce a new saliency map model which formulates a map as a generalized Bernoulli distribution. We then train a deep architecture to predict such maps using novel loss functions which pair the softmax activation function with measures designed to compute distances between probability distributions. We show in extensive experiments the effectiveness of such loss functions over standard ones on four public benchmark datasets, and demonstrate improved performance over state-of-the-art saliency methods. 
 <br/> [<a href="https://ieeexplore.ieee.org/document/7780989">details</a>]
       [<a href="https://github.com/saumya-jetley/cd_Saliency_PDP">code</a>]
-      [<a >demo:forthcoming</a>]
+      [<a href="https://www.youtube.com/watch?v=H9CSwiY_ApU">video</a>]
     </p><h6 class="mb-5"></h6>
 
     <li><h6 class="mb-5">Leveraging Prototypical Priors</h6><il>
