--- a/startbootstrap-personal-profile/bibs/endtoendsaliencyestimation.html
+++ b/startbootstrap-personal-profile/bibs/endtoendsaliencyestimation.html
@@ -56,10 +56,12 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
+@InProceedings{Jetley_2016_CVPR,
+author = {Jetley, Saumya and Murray, Naila and Vig, Eleonora},
+title = {End-To-End Saliency Mapping via Probability Distribution Prediction},
+booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2016}
 } 
 </div>
 
