--- a/startbootstrap-personal-profile/bibs/multiscriptidentification.html
+++ b/startbootstrap-personal-profile/bibs/multiscriptidentification.html
@@ -56,11 +56,24 @@ a.sidemenu.onView {
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:150px">
-@incollection{Jetley_and_Lord_withfriendslikethese,
-title = {With Friends Like These, Who Needs Adversaries?},
-author = {Jetley, Saumya and Lord, Nicholas, and Torr, Philip},
-booktitle = {Advances in Neural Information Processing Systems 31},
-} 
+@InProceedings{10.1007/978-3-319-11758-4_39,
+author="Jetley, Saumya 
+and Mehrotra, Kapil
+and Vaze, Atish
+and Belhe, Swapnil",
+editor="Campilho, Aur{\'e}lio
+and Kamel, Mohamed",
+title="Multi-script Identification from Printed Words",
+booktitle="Image Analysis and Recognition",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="359--368",
+abstract="In today's multi-script scenario, documents contain page, paragraph, line and up to word level intermixing of different scripts. We need a script recognition approach that can perform well even at the lowest semantically-valid level of words so as to serve as a generic solution. The present paper proposes a combination of Histogram of Oriented Gradients (HoG) and Local Binary Patterns (LBP), extracted over words, to capture the unique and discriminative structural formations of different scripts. Tested over MILE printed-word data set, this concatenated feature descriptor yields a state-of-the-art average recognition accuracy of 97.4 {\%} over a set of 11 Indian scripts.",
+isbn="978-3-319-11758-4"
+}
+
+
 </div>
 
 </body>
