--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -219,13 +219,14 @@ The second is a clear demonstration of the tight coupling between classification
       Saumya Jetley*, Nicholas A. Lord*, Philip H.S. Torr,
       <i>Proceedings of the 32nd conference on Neural Information Processing Systems (NIPS) 2018</i>
       [<a href="https://arxiv.org/abs/1807.04200">pdf</a>]
-      [<a >code:forthcoming</a>]<br/><br/>
+      [<a >code:forthcoming</a>]
+	  [<a href="./bibs/withfriendslikethese.html">bibtex</a>]<br/><br/>
 
       <b> Learn to pay attention, </b> 
       Saumya Jetley, Nicholas A. Lord, Namhoon Lee, Philip H.S. Torr,
       <i>Proceedings of the 6th International conference on learning representations (ICLR) 2018</i>
       [<a href="https://arxiv.org/pdf/1804.02391.pdf">pdf</a>]
-      [<a href="https://github.com/saumya-jetley/cd_ICLR18_ActiveAttention">code</a>]<br/><br/>
+      [<a href="https://github.com/saumya-jetley/cd_ICLR18_ActiveAttention">code</a>][<a href="./bibs/learntopayattention.html">bibtex</a>]<br/><br/>
 
       
       <h6> [2017] </h6>
@@ -239,7 +240,7 @@ The second is a clear demonstration of the tight coupling between classification
       Saumya Jetley*, Michael Sapienza*, Stuart Golodetz, Philip H.S. Torr,
       <i>Proceedings of the International conference on Computer Vision and Pattern Recognition (CVPR) 2017</i>
       [<a href="http://openaccess.thecvf.com/content_cvpr_2017/papers/Jetley_Straight_to_Shapes_CVPR_2017_paper.pdf">pdf</a>]
-      [<a href="https://github.com/torrvision/straighttoshapes">code</a>]<br/><br/>
+      [<a href="https://github.com/torrvision/straighttoshapes">code</a>][<a href="./bibs/straighttoshapes.html">bibtex</a>]<br/><br/>
 
       <h6> [2016] </h6>
 
@@ -247,7 +248,7 @@ The second is a clear demonstration of the tight coupling between classification
       Saumya Jetley, Naila Murray, Eleonora Vig,
       <i>Proceedings of the International conference on Computer Vision and Pattern Recognition (CVPR) 2016</i>
       [<a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Jetley_End-To-End_Saliency_Mapping_CVPR_2016_paper.pdf">pdf</a>]
-      [<a href="https://github.com/saumya-jetley/cd_Saliency_PDP">code</a>]<br/><br/>
+      [<a href="https://github.com/saumya-jetley/cd_Saliency_PDP">code</a>][<a href="./bibs/endtoendsaliencyestimation.html">bibtex</a>]<br/><br/>
 
       <h6> [2015] </h6>
 
@@ -255,43 +256,44 @@ The second is a clear demonstration of the tight coupling between classification
       Saumya Jetley, Bernardino Romera-Paredes, Sadeep Jayasumana, Philip H.S. Torr,
       <i>Proceedings of the British Machine Vision Conference (BMVC) 2015</i>
       [<a href="https://arxiv.org/abs/1512.01192">pdf</a>]
-      [<a href="https://github.com/saumya-jetley/cd_Prototypical_Priors_BMVC15">code</a>]<br/><br/>
+      [<a href="https://github.com/saumya-jetley/cd_Prototypical_Priors_BMVC15">code</a>][<a href="./bibs/prototypicalpriors.html">bibtex</a>]<br/><br/>
 
       <h6> [2014] </h6>
 
       <b> 3D Activity Recognition Using Motion History and Binary Shape Templates, </b> 
       Saumya Jetley, Fabio Cuzzolin,
       <i>Workshop proceedings of the Asian Conference on Computer Vision (ACCV) 2014 </i>
-      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-16628-5_10">pdf</a>]<br/><br/>
+      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-16628-5_10">pdf</a>][<a href="./bibs/3dactivityrecognition.html">bibtex</a>]<br/><br/>
 
       <b> Multi-script Identification from Printed Words, </b> 
       Saumya Jetley, Kapil Mehrotra, Atish Vaze, Swapnil Belhe,
       <i>proceedings of the International conference on Image Analysis and Recognition (ICIAR) 2014 </i>
-      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-11758-4_39">pdf</a>]<br/><br/>
+      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-11758-4_39">pdf</a>][<a href="./bibs/multiscriptidentification.html">bibtex</a>]<br/><br/>
 
       <h6> [2013] </h6>
 
       <b> Automatic flag recognition using texture based color analysis and gradient features , </b> 
       Saumya Jetley, Atish Vaze, Swapnil Belhe,
       <i>Proceedings of the International conference on Image Information Processing (ICIIP) 2013 </i>
-      [<a href="https://ieeexplore.ieee.org/abstract/document/6707635/">pdf</a>]<br/><br/>
+      [<a href="https://ieeexplore.ieee.org/abstract/document/6707635/">pdf</a>][<a href="./bibs/automaticflagrecognition.html">bibtex</a>]<br/><br/>
 
       <b> Unconstrained handwritten Devanagari character recognition using convolutional neural networks, </b> 
       Kapil Mehrotra, Saumya Jetley, Akash Deshmukh, Swapnil Belhe,
       <i> Proceedings of the 4th International workshop on Multilingual OCR (MOCR) 2013</i>
-      [<a href="https://dl.acm.org/citation.cfm?id=2505386">pdf</a>]<br/><br/>
+      [<a href="https://dl.acm.org/citation.cfm?id=2505386">pdf</a>][<a href="./bibs/unconstraineddeccharreco.html">bibtex</a>]<br/><br/>
 
       <h6> [2012] </h6>
 
       <b> Hindi handwritten word recognition using HMM and symbol tree, </b> 
       Swapnil Belhe, Chetan Paulzagade, Akash Deshmukh, Saumya Jetley, Kapil Mehrotra,
       <i> Proceeding of the workshop on Document Analysis and Recognition (DAR) 2012 </i>
-      [<a href="https://dl.acm.org/citation.cfm?id=2432556">pdf</a>]<br/><br/>
+      [<a href="https://dl.acm.org/citation.cfm?id=2432556">pdf</a>][<a href="./bibs/hindihwwordreco.html">bibtex</a>]<br/><br/>
 
       <b> Two-Stage hybrid binarization around fringe map based text line segmentation for document images,</b> 
       Saumya Jetley, Swapnil Belhe, V.K. Koppula, Atul Negi, 
       <i> Proceedings of the 21st International Conference on Pattern Recognition (ICPR) 2012 </i>
       [<a href="https://ieeexplore.ieee.org/document/6460142/">pdf</a>]
+	  [<a href="./bibs/twostagebinarisation.html">bibtex</a>]
 
     </div>
     </section>
