research internship presentation

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -417,7 +417,7 @@ The second is a clear demonstration of the tight coupling between classification
 
 <li> 2016: Amongst the <a href="https://warwick.ac.uk/fac/sci/dcs/research/tia/her2contest/outcome">top-10 algorithms for breast cancer prognosis challenge</a> (lookout for Team HERcules).<il>
 
-<li> 2015: Best research intern for ‘End-to-end saliency prediction using deep learning’ project at Xerox Research Centre Europe, Grenoble (now <a href="http://www.europe.naverlabs.com/NAVER-LABS-Europe/People/Naila-Murray">Naver Labs</a>).<il>
+<li> 2015: Best research internship presentation for ‘End-to-end saliency prediction using deep learning’ project presentation at Xerox Research Centre Europe, Grenoble (now <a href="http://www.europe.naverlabs.com/NAVER-LABS-Europe/People/Naila-Murray">Naver Labs</a>).<il>
 
 <li> 2015: Received an Honorary Mention for Originality for the <a href="https://drive.google.com/file/d/0B-5KrfSltQrGSXBWYkpCbThjdjQ/view">Technical Essay entry</a> at the International Computer Vision Summer School'15.<il>
 
