poster submitted to nips

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -220,7 +220,8 @@ The second is a clear demonstration of the tight coupling between classification
       <i>Proceedings of the 32nd conference on Neural Information Processing Systems (NIPS) 2018</i>
       [<a href="https://arxiv.org/abs/1807.04200">pdf</a>]
       [<a >code:forthcoming</a>]
-	  [<a href="./bibs/withfriendslikethese.html">bibtex</a>]<br/><br/>
+	  [<a href="./bibs/withfriendslikethese.html">bibtex</a>]
+      [<a href="./projects/NIPS_withfriendslikethese_poster.pdf">poster</a>]<br/><br/>
 
       <b> Learn to pay attention, </b> 
       Saumya Jetley, Nicholas A. Lord, Namhoon Lee, Philip H.S. Torr,
